--- a/src/components/work.css
+++ b/src/components/work.css
@@ -12,7 +12,7 @@
   height: 100%;
   /* background-color: #fff; */
   margin: 0 auto;
-  margin-bottom: 20%;
+  /* margin-bottom: 20%; */
 }
 
 .work .workTitle {
