--- a/src/components/header.css
+++ b/src/components/header.css
@@ -90,3 +90,60 @@
     margin-top: 20%;
   }
 }
+
+@media (max-width: 425px) {
+  .header h3 {
+    text-align: center;
+    margin-bottom: 5%;
+  }
+
+  .header .firstH2 {
+    font-size: 24px;
+    margin-bottom: 5%;
+    text-align: center;
+  }
+
+  .header .secondH2 {
+    margin-bottom: 5%;
+    font-size: 24px;
+    text-align: center;
+  }
+  .header p {
+    margin-bottom: 5%;
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 17px;
+    font-weight: 600;
+  }
+
+  .header .btn {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 20%;
+  }
+}
+
+@media (max-width: 768px) {
+  .header h3 {
+    font-size: 18px;
+  }
+
+  .header .firstH2 {
+    font-size: 36px;
+  }
+
+  .header .secondH2 {
+    font-size: 34px;
+  }
+
+  .header p {
+    width: 100%;
+    font-size: 16px;
+    font-weight: 500;
+  }
+
+  .header .btn {
+    width: 40%;
+  }
+}
